JG-2004-11-22-0: Bugfix:    fixed a memory leak in mirror interface.
                 Review:    SG
                 Testsuite: Fixed test system_tests/config/path_alias.
                 Review:    CR

SG-2004-11-22-0: Bugfix:    fixed the scheduler messages for qstat -j.
                 Changed:   scheduler
                 Review:    EB

CR-2004-11-19-1: Testsuite  - new test: commlib deadlock test
                            - fixed bug in issue test 1270

MD-2004-11-19-0: Bugfix:    Bugfix fix. backup/restore problem. compress/gzip
                            is now supported. backup/restore checks, if host is
                            mastermachine.
                 Changed:   inst_common.sh
                 Review:    pending

AH-2004-11-19-0: Bugfix:    Fix DRMAA_DURATION_{H|S}LIMIT misspelled  
                            as "durartion"
                 Review:    JG
                 Issue:     1345
                 Bugtraq:   6197253
                 Changed:   drmaa.h, drmaa_attributes(3)

JG-2004-11-19-0: Bugfix:    Fixed a deadlock in commlib error handling.
                 Review:    CR/SG

CR-2004-11-19-0: Testsuite: qconf test created files in /tmp/ which can
                            cause problems for multiple testsuites running
                            on the same host.

JG-2004-11-18-1: Testsuite: Fixes for tests functional/job_environment and
                            system_tests/clients/qmod,
                            some cleanup

AH-2004-11-18-0: Doc:       Fix doc/README-Autoinstall.txt missing in 
                            distribution.
                 Review:    TBD

JG-2004-11-18-0: Testsuite: Fixes for tests bugs/issuezilla/1291,
                            system_tests/clients/qalter,
                            system_tests/clients/qsub.
                            Some cleanup in config functions.

MD-2004-11-17-0: Bugfix:    - backup fails if root is mapped to nobody
                 Review:    pending